--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 body {
-    padding: 20px;
-    background-color: #000;
+    margin: 0;
+    padding: 0;
+    background-color: #1f1f1f;
+    overflow: hidden;
 }
 
 header {
-    padding: 20px 0 20px 0;
+    /*padding: 20px 0 20px 0;*/
 }
 
 #dragndrop{
@@ -12,26 +14,8 @@ header {
 }
 
 #dragndrop img{
-    width: 75px;
-    height: 75px;
-}
-
-.config-name{
-    font-size: 20px;
-}
-
-#editPnl #json{
-    margin: 10px 0 0 0;
-    width: 640px;
-    height: 480px;
-}
-
-#saveBtn, #resetBtn{
-    margin-left: 10px;
-}
-
-footer {
-    padding: 20px 0 20px 0;
+    width: 30px;
+    height: 30px;
 }
 
 .hide {
