--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,22 @@ body {
 
 header {
     /*padding: 20px 0 20px 0;*/
+    margin: 0 8px 0 8px;
+    overflow: hidden;
+}
+
+#manifestSelect{
+    margin: 8px 0 8px 0;
+}
+
+#manifest{
+    width: 300px;
+    float: left;
+}
+
+header .buttons{
+    float: left;
+    margin: 0 0 0 8px;
 }
 
 #dragndrop{
