--- a/styles.css
+++ b/styles.css
@@ -12,20 +12,31 @@ header {
 }
 
 #manifestSelect{
-    margin: 8px 0 8px 0;
+    display: none;
+    margin: 8px 8px 8px 0;
+    width: 300px;
+    float: left;
 }
 
 #manifest{
+    margin: 8px 0 8px 0;
     width: 300px;
     float: left;
 }
 
 header .buttons{
-    float: left;
-    margin: 0 0 0 8px;
+     float: left;
+     margin: 8px 0 0 8px;
+}
+
+header .buttons .button{
+    margin: 0;
+    padding-top: 0.77rem;
+    padding-bottom: 0.77rem;
 }
 
 #dragndrop{
+    display: none;
     margin: 0 0 0 20px;
 }
 
