--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 
 header {
     /*padding: 20px 0 20px 0;*/
-    margin: 0 8px 0 8px;
+    padding: 0 8px 0 8px;
     overflow: hidden;
 }
 
@@ -45,6 +45,6 @@ header .buttons .button{
     height: 30px;
 }
 
-.hide {
+footer {
     display: none;
 }
