--- a/uv/themes/uv-cy-GB-theme/css/uv-pdf-extension/theme.css
+++ b/uv/themes/uv-cy-GB-theme/css/uv-pdf-extension/theme.css
@@ -2276,10 +2276,10 @@ canvas {
   height: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: #565656;
+  background: none;
 }
 ::-webkit-scrollbar-thumb {
-  background: #bebebe;
+  background: #565656;
 }
 html,
 body {
@@ -3315,8 +3315,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.embed {
   background-image: url('../../img/uv-shared-module/embed.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -3335,8 +3335,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.download {
   background-image: url('../../img/uv-shared-module/download.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -3355,8 +3355,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.bookmark {
   background-image: url('../../img/uv-shared-module/bookmark.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -3375,8 +3375,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.fullScreen {
   background-image: url('../../img/uv-shared-module/fullscreen.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -3397,8 +3397,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.exitFullscreen {
   background-image: url('../../img/uv-shared-module/exit_fullscreen.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -3416,6 +3416,31 @@ input[type=range]:focus::-ms-fill-upper {
   color: #fff;
   text-decoration: none;
 }
+#app .footerPanel .options.minimiseButtons a:first-child {
+  margin-left: 10px;
+}
+#app .footerPanel .options.minimiseButtons a.download {
+  font: 0/0 a;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+  line-height: 0;
+  font-size: 0;
+  color: transparent;
+  width: 27px;
+  padding: 0;
+}
+#app .footerPanel .options.minimiseButtons a.bookmark {
+  font: 0/0 a;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+  line-height: 0;
+  font-size: 0;
+  color: transparent;
+  width: 27px;
+  padding: 0;
+}
 #app .footerPanel .options.minimiseButtons a.embed {
   font: 0/0 a;
   text-shadow: none;
@@ -3425,6 +3450,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 0;
   color: transparent;
   width: 27px;
+  padding: 0;
 }
 #app .footerPanel .options.minimiseButtons a.fullScreen {
   font: 0/0 a;
@@ -3435,6 +3461,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 0;
   color: transparent;
   width: 21px;
+  padding: 0;
 }
 #app .footerPanel .options.minimiseButtons a.exitFullscreen {
   font: 0/0 a;
@@ -3445,6 +3472,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 0;
   color: transparent;
   width: 21px;
+  padding: 0;
 }
 #app .footerPanel .options.minimiseButtons a.normal {
   font: 0/0 a;
@@ -3455,6 +3483,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 0;
   color: transparent;
   width: 21px;
+  padding: 0;
 }
 #app.lightbox .footerPanel .options a.imageBtn.normal {
   background: url('../../img/uv-shared-module/close_lightbox.png') no-repeat;
