--- a/uv/themes/uv-en-GB-theme/css/uv-mediaelement-extension/theme.css
+++ b/uv/themes/uv-en-GB-theme/css/uv-mediaelement-extension/theme.css
@@ -1420,10 +1420,10 @@
   height: 12px;
 }
 ::-webkit-scrollbar-track {
-  background: #565656;
+  background: none;
 }
 ::-webkit-scrollbar-thumb {
-  background: #bebebe;
+  background: #565656;
 }
 html,
 body {
@@ -2459,8 +2459,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.embed {
   background-image: url('../../img/uv-shared-module/embed.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -2479,8 +2479,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.download {
   background-image: url('../../img/uv-shared-module/download.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -2499,8 +2499,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.bookmark {
   background-image: url('../../img/uv-shared-module/bookmark.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -2519,8 +2519,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.fullScreen {
   background-image: url('../../img/uv-shared-module/fullscreen.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -2541,8 +2541,8 @@ input[type=range]:focus::-ms-fill-upper {
 #app .footerPanel .options a.exitFullscreen {
   background-image: url('../../img/uv-shared-module/exit_fullscreen.png');
   background-repeat: no-repeat;
-  height: 20px;
-  line-height: 20px;
+  height: 21px;
+  line-height: 21px;
   cursor: pointer;
   color: #fff;
   text-decoration: none;
@@ -2560,6 +2560,31 @@ input[type=range]:focus::-ms-fill-upper {
   color: #fff;
   text-decoration: none;
 }
+#app .footerPanel .options.minimiseButtons a:first-child {
+  margin-left: 10px;
+}
+#app .footerPanel .options.minimiseButtons a.download {
+  font: 0/0 a;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+  line-height: 0;
+  font-size: 0;
+  color: transparent;
+  width: 27px;
+  padding: 0;
+}
+#app .footerPanel .options.minimiseButtons a.bookmark {
+  font: 0/0 a;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+  line-height: 0;
+  font-size: 0;
+  color: transparent;
+  width: 27px;
+  padding: 0;
+}
 #app .footerPanel .options.minimiseButtons a.embed {
   font: 0/0 a;
   text-shadow: none;
@@ -2569,6 +2594,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 0;
   color: transparent;
   width: 27px;
+  padding: 0;
 }
 #app .footerPanel .options.minimiseButtons a.fullScreen {
   font: 0/0 a;
@@ -2579,6 +2605,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 0;
   color: transparent;
   width: 21px;
+  padding: 0;
 }
 #app .footerPanel .options.minimiseButtons a.exitFullscreen {
   font: 0/0 a;
@@ -2589,6 +2616,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 0;
   color: transparent;
   width: 21px;
+  padding: 0;
 }
 #app .footerPanel .options.minimiseButtons a.normal {
   font: 0/0 a;
@@ -2599,6 +2627,7 @@ input[type=range]:focus::-ms-fill-upper {
   font-size: 0;
   color: transparent;
   width: 21px;
+  padding: 0;
 }
 #app.lightbox .footerPanel .options a.imageBtn.normal {
   background: url('../../img/uv-shared-module/close_lightbox.png') no-repeat;
