--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ header {
     overflow: hidden;
 }
 
+#logo{
+    display: none;
+}
+
 #manifestSelect{
     display: none;
     margin: 8px 8px 8px 0;
