--- a/css/creative.css
+++ b/css/creative.css
@@ -183,6 +183,7 @@ header .header-content .header-content-inner p {
   color: rgba(255, 255, 255, 0.95);
   font-size: 18px;
   margin-bottom: 50px;
+  text-shadow: 1px 1px #000000;
 }
 @media (min-width: 768px) {
   header {
