--- a/less/creative.less
+++ b/less/creative.less
@@ -193,6 +193,7 @@ header {
                 color: fade(white, 95%);
                 font-size: 18px;
                 margin-bottom: 50px;
+                text-shadow: 1px 1px #000000;
             }
         }
     }
