added ghent and explanatory text

--- a/css/creative.css
+++ b/css/creative.css
@@ -423,3 +423,7 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #222222;
 }
+span.explanatory {
+  display: block;
+  font-size: 12px;
+}
