--- a/less/creative.less
+++ b/less/creative.less
@@ -373,3 +373,8 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @gray-darker;
 }
+
+span.explanatory {
+    display: block;
+    font-size: 12px;
+}
