--- a/less/viewer.less
+++ b/less/viewer.less
@@ -1,52 +1,23 @@
 body.viewer {
     margin: 0;
     padding: 0;
-    background-color: #211f1f;
+    background-color: @uv-bg;
     overflow: hidden;
 
-    header {
-        /*padding: 20px 0 20px 0;*/
-        padding: 0 8px 0 8px;
-        overflow: hidden;
+    nav {
+        margin-bottom: 0px;
     }
 
-    #logo {
-        display: none;
-    }
-
-    #manifestSelect{
-        display: none;
-        margin: 8px 8px 8px 0;
-        width: 300px;
-        float: left;
-    }
-
-    #manifest{
-        margin: 8px 0 8px 0;
-        width: 300px;
-        float: left;
-    }
-
-    header .buttons{
-        float: left;
-        margin: 8px 0 0 8px;
-    }
-
-    header .buttons .button{
-        margin: 0;
-        padding-top: 0.77rem;
-        padding-bottom: 0.77rem;
-        background-color: #14a4c3;
-    }
-
-    #dragndrop{
-        display: none;
-        margin: 0 0 0 20px;
-    }
-
-    #dragndrop img{
-        width: 30px;
-        height: 30px;
+    .navbar-default {
+        background-color: @uv-bg;
+        border-color: fade(white, 30%);
+        .navbar-header .navbar-brand {
+            color: fade(white, 95%);
+            &:hover,
+            &:focus {
+                color: white;
+            }
+        }
     }
 
     footer {
