--- a/less/variables.less
+++ b/less/variables.less
@@ -10,3 +10,4 @@
 @gray:             lighten(@gray-base, 33.5%); // #555
 @gray-light:       lighten(@gray-base, 46.7%); // #777
 @gray-lighter:     lighten(@gray-base, 93.5%); // #eee
+@uv-bg:            #211f1f;
