--- a/less/home.less
+++ b/less/home.less
@@ -66,7 +66,8 @@ body.home {
             color: black;
             font-weight: normal;
             .sans-serif-font;
-            width: 290px;
+            width: 100%;
+            max-width: 300px;
         }
     }
 
