--- a/less/home.less
+++ b/less/home.less
@@ -151,4 +151,21 @@ body.home {
         display: block;
         font-size: 12px;
     }
+
+    #moreinfo {
+        padding-bottom: 0px;
+
+        a {
+            display: block;
+            padding-bottom: 5px;
+        }
+    }
+
+    #contact {
+
+        a {
+            display: block;
+            padding-bottom: 5px;
+        }
+    }
 }
