--- a/less/home.less
+++ b/less/home.less
@@ -163,6 +163,16 @@ body.home {
 
     #contact {
 
+        padding-bottom: 0px;
+
+        a {
+            display: block;
+            padding-bottom: 5px;
+        }
+    }
+
+    #support {
+
         a {
             display: block;
             padding-bottom: 5px;
