--- a/less/home.less
+++ b/less/home.less
@@ -82,6 +82,10 @@ body.home {
         }
     }
 
+    #showreel {
+        padding-bottom: 0;
+    }
+
     .showcase-box {
         position: relative;
         display: block;
