--- a/less/home.less
+++ b/less/home.less
@@ -31,6 +31,7 @@ body.home {
                     font-size: 18px;
                     margin-bottom: 50px;
                     text-shadow: 1px 1px #000000;
+                    max-width: 700px;
                 }
             }
         }
