updated logo, fonts

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /*!
  * Start Bootstrap -  v1.0.0 (https://github.com/UniversalViewer/universalviewer.github.io#readme)
- * Copyright 2013-2018 Edward Silverton <e.silverton@gmail.com> (http://edsilv.com)
+ * Copyright 2013-2020 Edward Silverton <e.silverton@gmail.com> (http://edsilv.com)
  * Licensed under  ()
  */
 body.home header {
@@ -33,7 +33,7 @@ body.home header .header-content .header-content-inner hr {
   margin: 30px auto;
 }
 body.home header .header-content .header-content-inner p {
-  font-weight: 400;
+  font-weight: bold;
   color: rgba(255, 255, 255, 0.95);
   font-size: 18px;
   margin-bottom: 50px;
@@ -144,7 +144,7 @@ body.home .call-to-action h2 {
 }
 body.home span.explanatory {
   display: block;
-  font-size: 12px;
+  font-size: 14px;
 }
 body.home #moreinfo {
   padding-bottom: 0px;
@@ -193,7 +193,7 @@ body {
   width: 100%;
 }
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   webkit-tap-highlight-color: #222222;
 }
 hr {
@@ -223,7 +223,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 p {
   font-size: 16px;
@@ -249,14 +249,14 @@ aside {
 .navbar-default {
   background-color: white;
   border-color: rgba(34, 34, 34, 0.05);
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
   color: #3e114e;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -343,6 +343,11 @@ aside {
 .no-gutter > [class*='col-'] {
   padding-right: 0;
   padding-left: 0;
+}
+@media (min-width: 1200px) {
+  .col-lg-3 {
+    width: 24%;
+  }
 }
 .btn-default {
   color: #222222;
