--- a/less/mixins.less
+++ b/less/mixins.less
@@ -54,6 +54,10 @@
 	}
 }
 
+.header-font() {
+	font-family: 'Inter', sans-serif;
+}
+
 .sans-serif-font() {
 	font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
