--- a/less/home.less
+++ b/less/home.less
@@ -26,7 +26,7 @@ body.home {
                     margin: 30px auto;
                 }
                 p {
-                    font-weight: 400;
+                    font-weight: bold;
                     color: fade(white, 95%);
                     font-size: 18px;
                     margin-bottom: 50px;
@@ -150,7 +150,7 @@ body.home {
 
     span.explanatory {
         display: block;
-        font-size: 12px;
+        font-size: 14px;
     }
 
     #moreinfo {
