fix for v wide screens

--- a/less/home.less
+++ b/less/home.less
@@ -86,8 +86,10 @@ body.home {
     .showcase-box {
         position: relative;
         display: block;
-        max-width: 650px;
         margin: 0 auto;
+        img {
+            width: 100%;
+        }
         .showcase-box-caption {
             color: white;
             opacity: 0;
