relative paths so preview pages site works

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,13 +30,13 @@
 
     <!-- Bootstrap Core CSS -->
     <link
-      href="/css/bootstrap.min.css"
+      href="css/bootstrap.min.css"
       rel="stylesheet"
     />
 
     <!-- Custom Fonts -->
     <link
-      href="/css/font-awesome.min.css"
+      href="css/font-awesome.min.css"
       rel="stylesheet"
       type="text/css"
     />
@@ -54,13 +54,13 @@
 
     <!-- Plugin CSS -->
     <link
-      href="/css/magnific-popup.css"
+      href="css/magnific-popup.css"
       rel="stylesheet"
     />
 
     <!-- Theme CSS -->
     <link
-      href="/css/styles.min.css"
+      href="css/styles.min.css"
       rel="stylesheet"
     />
   </head>
