--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,7 @@ import Layout from '../layouts/Layout.astro';
     <div class="header-content">
       <div class="header-content-inner">
         <img
-          src="/img/logo.png"
+          src="img/logo.png"
           alt="UV"
         />
         <hr class="clear" />
@@ -236,7 +236,7 @@ import Layout from '../layouts/Layout.astro';
             class="showcase-box"
           >
             <img
-              src="/img/showcase/villanova.jpg"
+              src="img/showcase/villanova.jpg"
               class="img-responsive"
               alt=""
             />
@@ -260,7 +260,7 @@ import Layout from '../layouts/Layout.astro';
             class="showcase-box"
           >
             <img
-              src="/img/showcase/nlw.jpg"
+              src="img/showcase/nlw.jpg"
               class="img-responsive"
               alt=""
             />
@@ -283,7 +283,7 @@ import Layout from '../layouts/Layout.astro';
             class="showcase-box"
           >
             <img
-              src="/img/showcase/bl.jpg"
+              src="img/showcase/bl.jpg"
               class="img-responsive"
               alt=""
             />
@@ -304,7 +304,7 @@ import Layout from '../layouts/Layout.astro';
             class="showcase-box"
           >
             <img
-              src="/img/showcase/ncsu.jpg"
+              src="img/showcase/ncsu.jpg"
               class="img-responsive"
               alt=""
             />
@@ -323,7 +323,7 @@ import Layout from '../layouts/Layout.astro';
             class="showcase-box"
           >
             <img
-              src="/img/showcase/bodleian.jpg"
+              src="img/showcase/bodleian.jpg"
               class="img-responsive"
               alt=""
             />
@@ -344,7 +344,7 @@ import Layout from '../layouts/Layout.astro';
             class="showcase-box"
           >
             <img
-              src="/img/showcase/riksarkivet.jpg"
+              src="img/showcase/riksarkivet.jpg"
               class="img-responsive"
               alt=""
             />
@@ -473,13 +473,13 @@ import Layout from '../layouts/Layout.astro';
   <!-- jQuery -->
   <script
     is:inline
-    src="/js/jquery.min.js"
+    src="js/jquery.min.js"
   ></script>
 
   <!-- Bootstrap Core JavaScript -->
   <script
     is:inline
-    src="/js/bootstrap.min.js"
+    src="js/bootstrap.min.js"
   ></script>
 
   <!-- Plugin JavaScript -->
@@ -488,22 +488,22 @@ import Layout from '../layouts/Layout.astro';
   ></script>
   <script
     is:inline
-    src="/js/scrollreveal.min.js"
+    src="js/scrollreveal.min.js"
   ></script>
   <script
     is:inline
-    src="/js/jquery.magnific-popup.min.js"
+    src="js/jquery.magnific-popup.min.js"
   ></script>
 
   <!-- Theme JavaScript -->
   <script
     is:inline
     type="text/javascript"
-    src="/js/utils.js"
+    src="js/utils.js"
   ></script>
   <script
     is:inline
-    src="/js/index.min.js"
+    src="js/index.min.js"
   ></script>
 
   <script>
