Update links to use HTTPS for Bodleian viewer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -318,8 +318,8 @@ import Layout from '../layouts/Layout.astro';
         </div>
         <div class="col-lg-4 col-sm-6">
           <a
-            href="http://iiif.bodleian.ox.ac.uk/iiif/viewer/60834383-7146-41ab-bfe1-48ee97bc04be"
-            data-manifest="http://iiif.bodleian.ox.ac.uk/iiif/manifest/60834383-7146-41ab-bfe1-48ee97bc04be.json"
+            href="https://iiif.bodleian.ox.ac.uk/iiif/viewer/60834383-7146-41ab-bfe1-48ee97bc04be"
+            data-manifest="https://iiif.bodleian.ox.ac.uk/iiif/manifest/60834383-7146-41ab-bfe1-48ee97bc04be.json"
             class="showcase-box"
           >
             <img
