--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -1,9 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = 'Home'
+const pageTitle = 'Roadmap'
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h2>slot content</h2>
 </BaseLayout>
-
