--- a/src/pages/accessibility.astro
+++ b/src/pages/accessibility.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = 'Home'
+const pageTitle = 'Accessibility'
 ---
 
 <BaseLayout pageTitle={pageTitle}>
