--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,26 +1,29 @@
 ---
 ---
-
-<ul>
-    <li>
-        <a href="/">Home</a>
-    </li>
-    <li>
-        <a href="/demo">Demo</a>
-    </li>
-    <li>
-        <a href="/events">Events</a>
-    </li>
-    <li>
-        <a href="/docs">Documentation</a>
-    </li>
-    <li>
-        <a href="/blog">Blog</a>
-    </li>
-    <li>
-        <a href="/communnity">Community</a>
-    </li>
-</ul>
+<header>
+    <nav>
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/demo">Demo</a>
+            </li>
+            <li>
+                <a href="/events">Events</a>
+            </li>
+            <li>
+                <a href="/docs">Documentation</a>
+            </li>
+            <li>
+                <a href="/blog">Blog</a>
+            </li>
+            <li>
+                <a href="/community">Community</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 
 
 
