--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,8 +21,10 @@ const { pageTitle } = Astro.props;
   </head>
   <body>
     <Header />
+    <main>
     <h1>{pageTitle}</h1>
     <slot />
+    </main>
     <Footer />
     <!-- <script>
       import "../scripts/menu.js";
