example class passing to base layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = 'Home'
+const pageTitle = 'Home';
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-</BaseLayout>
-
+<BaseLayout
+  pageTitle={pageTitle}
+  mainClass="home-main"
+/>
