add logo placeholder to header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,16 @@
 ---
 
 <header class="site-header">
+  <a
+    href=""
+    class="logo-link"
+  >
+    <img
+      src=""
+      alt=""
+      class="logo-image"
+    />
+  </a>
   <nav class="main-nav">
     <ul class="main-nav-list">
       <li class="main-nav-list-item">
