--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -1,7 +1,6 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = 'Events'
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "Events";
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-</BaseLayout>
+<BaseLayout pageTitle={pageTitle} />
